[GTK] critical warning: gdk_window_get_cursor() called on a NULL window https://bugs.webkit.org/show_bug.cgi?id=92651

Patch by Claudio Saavedra <csaavedra@igalia.com> on 2012-07-30
Reviewed by Martin Robinson.

PageClientImpl::setCursor() might get called before the
window is realized, so safeguard against it.

* UIProcess/API/gtk/PageClientImpl.cpp:
(WebKit::PageClientImpl::setCursor): early return if the window is
not realized.

Canonical link: https://commits.webkit.org/110497@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124087 268f45cc-cd09-0410-ab3c-d52691b4dbfc